# a2a-agent-orchestrator

./: .env.example  .gitignore  Makefile  README.md  env.py  main.py  pyproject.toml
agents/host/: __init__.py  a2a.py  base.py
agents/weather_agent/: Dockerfile  README.md  pyproject.toml
agents/weather_agent/app/: __init__.py  __main__.py  agent.py  agent_executor.py  test_client.py
prompts/: __init__.py  a2a_system_prompt.py
protocol/: __init__.py  adk_runner.py  remote_agent_connection.py  remote_agent_manager.py
utils/: __init__.py  logger.py  types.py
