[project]
name = "a2a-agent-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.22",
    "google-adk>=1.25.0",
    "google-genai>=1.43.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.0",
    "langchain>=1.0.3",
    "langchain-core>=1.1.0",
    "langgraph>=1.0.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.81.13",
]
