[project]
name = "weather-agent"
version = "0.1.0"
description = "Weather agent example that exposes weather functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=1.1.0",
    "langchain>=1.0.3",
    "langchain-core>=1.1.0",
    "langgraph>=1.0.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.0",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
